--- a/00_Home/00-1_index.html
+++ b/00_Home/00-1_index.html
@@ -79,47 +79,82 @@
             <h2>Works<span>制作物</span></h2>
             <div class="container">
                 <ul>
-                    <li>
-                        <figure><a href="02_OverView_seazoom/02-1_index.html">
-                                <span class="mask"><img src="00-4_image/Topimage_seaZOOM .jpg" alt="SeaZOOM写真"><span
-                                        class="cap">More.</span></span>
-                                <figcaption>大型複合施設期間限イベント”SeaZOOM”（仮想サイト）</figcaption>
-                            </a></figure>
-                    </li>
-                    <li>
-                        <figure><a href="02_OverView_pivert/02-1_index.html">
-                                <span class="mask"><img src="00-4_image/Topimage_pivert.jpg" alt="pivert写真"><span
-                                        class="cap">More.</span></span>
-                                <figcaption>フレンチレストラン”pivert”（仮想サイト）</figcaption>
-                            </a></figure>
-                    </li>
-                    <li>
-                        <figure><a href="02_OverView_shinjuunivercity/02-1_index.html">
-                                <span class="mask"><img src="00-4_image/Topimage_shinju-univercity.jpg" alt="真珠大学"><span
-                                        class="cap">More.</span></span>
-                                <figcaption>真珠短期大学のサイト”真珠大学”（仮想サイト）</figcaption>
-                            </a></figure>
-                    </li>
-                    <li>
-                        <figure><a href="02_OverView_Bowty/02-1_index.html">
-                                <span class="mask"><img src="00-4_image/Topimage_Bowty. cafe .jpg"
-                                        alt="Bowty-cafe"><span class="cap">More.</span></span>
-                                <figcaption>カフェ"Bowty."（仮想サイト）</figcaption>
-                            </a></figure>
-                    </li>
-                    <li>
+                    <li class="web">
                         <figure>
-                            <div class="banner">
+                            <a href="02_OverView_seazoom/02-1_index.html">
+                                <span class="mask"><img src="00-4_image/Topimage_seaZOOM .jpg" alt="SeaZOOM写真">
+                                    <span class="cap">More.</span></span>
+                                <figcaption>大型複合施設期間限イベント”SeaZOOM”（仮想サイト）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li class="web">
+                        <figure>
+                            <a href="02_OverView_pivert/02-1_index.html">
+                                <span class="mask"><img src="00-4_image/Topimage_pivert.jpg" alt="pivert写真">
+                                    <span class="cap">More.</span></span>
+                                <figcaption>フレンチレストラン”pivert”（仮想サイト）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li class="web">
+                        <figure><a href="02_OverView_shinjuunivercity/02-1_index.html">
+                                <span class="mask"><img src="00-4_image/Topimage_shinju-univercity.jpg" alt="真珠大学">
+                                    <span class="cap">More.</span></span>
+                                <figcaption>真珠短期大学のサイト”真珠大学”（仮想サイト）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li class="web">
+                        <figure><a href="02_OverView_Bowty/02-1_index.html">
+                                <span class="mask"><img src="00-4_image/Topimage_Bowty. cafe .jpg" alt="Bowty-cafe">
+                                    <span class="cap">More.</span></span>
+                                <figcaption>カフェ"Bowty."（仮想サイト）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li>
+                    </li>
+                    <li>
+                    </li>
+                    <li class="banner">
+                        <figure>
+                            <div class="b_inner">
+                                <a href="02_OverView_banner_purefull/02-1_index.html">
+                                    <span class="mask mask2"><img src="00-4_image/banner_purefull.jpg"
+                                            alt="purefullバナー">
+                                        <span class="cap">More.</span></span></a>
+                            </div>
+                            <a href="02_OverView_banner_purefull/02-1_index.html">
+                                <figcaption>化粧水 -Purefull-（仮想バナー）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li class="banner">
+                        <figure>
+                            <div class="b_inner">
+                                <a href="02_OverView_banner_shizuokacamp/02-1_index.html">
+                                    <span class="mask mask2"><img src="00-4_image/banner_shizuokacamp.jpg"
+                                            alt="静岡県キャンプ特集バナー">
+                                        <span class="cap">More.</span></span></a>
+                            </div>
+                            <a href="02_OverView_banner_shizuokacamp/02-1_index.html">
+                                <figcaption>一人で楽しむキャンプ特集（仮想バナー）</figcaption>
+                            </a>
+                        </figure>
+                    </li>
+                    <li class="banner">
+                        <figure>
+                            <div class="b_inner">
                                 <a href="02_OverView_banner_sakanaproject/02-1_index.html">
                                     <span class="mask mask2"><img src="00-4_image/Banner_sakanaProject.jpg"
-                                            alt="SeaZOOMバナー"><span class="cap">More.</span></span></a>
+                                            alt="SeaZOOMバナー">
+                                        <span class="cap">More.</span></span></a>
                             </div>
                             <a href="#">
                                 <figcaption>サカナプロジェクト（仮想サイトバナー）</figcaption>
                             </a>
                         </figure>
-                    </li>
-                    <li>
                     </li>
                 </ul>
             </div>
