--- a/00_Home/02_OverView_banner_purefull/02-1_index.html
+++ b/00_Home/02_OverView_banner_purefull/02-1_index.html
@@ -66,21 +66,16 @@
             <div class="container">
                 <ul>
                     <li>
-                        <figure><img src="02-4_image/pc-banner1.jpg" alt="sakanaproject写真">
-                                <figcaption>サイズ640*200</figcaption>
-                            </figure>
-                    </li>
-                    <li>
-                        <figure><img src="02-4_image/sp-banner1.jpg" alt="sakanaproject写真">
-                                <figcaption>サイズ400*100</figcaption>
+                        <figure><img src="02-4_image/banner_purefull.jpg" alt="purefullバナー写真">
+                                <figcaption>作成時サイズ1080×1080</figcaption>
                             </figure>
                     </li>
                 </ul>
             </div>
             <div class="overview">
-                <p>【仮想プロジェクトバナー】</p>
+                <p>【仮想バナー】</p>
                 <p>
-                    ”未来にさかなを残す”というスローガンを掲げた団体の活動詳細を発信しているサイトへ繋がるバナーです。
+                    新しく基礎化粧品が発表されるため、PR用のバナーです。
                 </p>
                 <ul>
                     <li>
@@ -100,7 +95,8 @@
                             <p>目的</p>
                         </div>
                         <p>
-                            ほとんどがボランティアで行っている非利益の活動のため、活動内容を知っていただく＆興味を持っていただくことで活動の寄付を募る（寄付については期間限定の会場で寄付金箱を設置）
+                            ・商品の認知度を上げ、商品を知ってもらうため<br>
+                            ・新商品をお試しいただき、商品の購入につなげるため
                         </p>
                     </li>
                 </ul>
@@ -112,13 +108,13 @@
             <div class="P-sub">
                 <p>
                     <span>Point1</span>
-                    未来を連想してSF感のあるフォントを設定。フォント色は海をイメージし青色に。視認性を上げるために波たった時の色泡を連想しフォント外側に白のグラデーションをかけました。
+                    ピュアなイメージを青系統の色で統一し、軽やかで爽やかに。文字下に直線を入れることにより、文字を見てもらえるようにしました。
                 </p>
             </div>
             <div class="P-sub">
                 <p>
                     <span>Point2</span>
-                    波をイメージしなみなみの画像の切り替えにしています。
+                    ”満ちる”イメージを背景の波面で表現し、ピュアのイメージから波が透けるような加工をしました。
                 </p>
             </div>
         </section>
