--- a/00_Home/02_OverView_banner_shizuokacamp/02-1_index.html
+++ b/00_Home/02_OverView_banner_shizuokacamp/02-1_index.html
@@ -66,21 +66,16 @@
             <div class="container">
                 <ul>
                     <li>
-                        <figure><img src="02-4_image/pc-banner1.jpg" alt="sakanaproject写真">
-                                <figcaption>サイズ640*200</figcaption>
-                            </figure>
-                    </li>
-                    <li>
-                        <figure><img src="02-4_image/sp-banner1.jpg" alt="sakanaproject写真">
-                                <figcaption>サイズ400*100</figcaption>
+                        <figure><img src="02-4_image/banner_sizuokacamp.jpg" alt="静岡キャンプ場写真">
+                                <figcaption>作成時サイズ900*450</figcaption>
                             </figure>
                     </li>
                 </ul>
             </div>
             <div class="overview">
-                <p>【仮想プロジェクトバナー】</p>
+                <p>【仮想バナー】</p>
                 <p>
-                    ”未来にさかなを残す”というスローガンを掲げた団体の活動詳細を発信しているサイトへ繋がるバナーです。
+                    静かに過ごしたいソロキャンパー向けのキャンプ場の特集in静岡
                 </p>
                 <ul>
                     <li>
@@ -88,7 +83,7 @@
                     </li>
                     <li>
                         <p>
-                            DATE : 約2日
+                            DATE : 1日（5時間）
                         </p>
                     </li>
                 </ul>
@@ -100,7 +95,8 @@
                             <p>目的</p>
                         </div>
                         <p>
-                            ほとんどがボランティアで行っている非利益の活動のため、活動内容を知っていただく＆興味を持っていただくことで活動の寄付を募る（寄付については期間限定の会場で寄付金箱を設置）
+                            ・静かにゆっくり過ごしたいキャンパーに静かに過ごせるキャンプ場があることを知ってもらいたい＆来てほしい<br>
+                            ・静岡県にキャンプをしてきてほしい、静岡県の良さを知ってほしい
                         </p>
                     </li>
                 </ul>
@@ -112,13 +108,13 @@
             <div class="P-sub">
                 <p>
                     <span>Point1</span>
-                    未来を連想してSF感のあるフォントを設定。フォント色は海をイメージし青色に。視認性を上げるために波たった時の色泡を連想しフォント外側に白のグラデーションをかけました。
+                    ”しずかな”をポイントに文字の字体を細めにし、文字の間隔を広めにとり空間の静かさを表現。
                 </p>
             </div>
             <div class="P-sub">
                 <p>
                     <span>Point2</span>
-                    波をイメージしなみなみの画像の切り替えにしています。
+                    静岡県の富士山をイメージしたシンプルなテーマイメージを作成しました。文字が見えづらい箇所は白いグラデーションを重ね、濃い色の文字を引き立てるようにしました。
                 </p>
             </div>
         </section>
